--- a/index.html
+++ b/index.html
@@ -102,11 +102,12 @@
 				<language-selection-screen></language-selection-screen>
 				<loading-screen></loading-screen>
 				<main-screen>
+					<h1>The Hallowed</h1>
 					<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
 					<dialog-log></dialog-log>
-					<text-box></text-box>
+					<text-box><div><h3>Health: <span id="health">0</span></h3></div></text-box>
 					<quick-menu></quick-menu>
 				</game-screen>
 				<gallery-screen></gallery-screen>
