--- a/Pub/index.html
+++ b/Pub/index.html
@@ -107,7 +107,7 @@
 				</main-screen>
 				<game-screen>
 					<dialog-log></dialog-log>
-					<text-box><div><h3>Health: <span id="health">0</span></h3></div></text-box>
+					<text-box><!--<div><h3>Health: <span id="health">0</span></h3></div>--></text-box>
 					<quick-menu></quick-menu>
 				</game-screen>
 				<gallery-screen></gallery-screen>
