--- a/Pub/index.html
+++ b/Pub/index.html
@@ -102,7 +102,7 @@
 				<language-selection-screen></language-selection-screen>
 				<loading-screen></loading-screen>
 				<main-screen>
-					<h1>The Hallowed</h1>
+					<h1>The Hallowlands</h1>
 					<main-menu></main-menu>
 				</main-screen>
 				<game-screen>
